# hw-rocksdb-client

./: .ghc.environment.x86_64-darwin-8.4.4  .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  .gitignore  LICENSE  README.md  Setup.hs  circle.yml  default.nix  hw-rocksdb-client.cabal  nixos-18-03.json  nixpkgs-19.09-darwin.json  pkgs-from-json.nix  release.nix  result  rocksdb-client.cabal  shell.nix  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
circle.build/: build-rocksdb.sh  stack-build.sh  stack-test.sh
examples/: LowLevelSimple.hs  RocksDBSimple.hs  simple.hs
examples/lowlevel-simple/: Main.hs
examples/rocks-db/: Main.hs
examples/rocksdb-simple/: Main.hs
nix/: fetchNixpkgs.nix  overrides.nix
scripts/: build-rocksdb.sh
src/: RocksDB.hs
src/RocksDB/: Basic.hs  Basics.hs  Except.hs  Iterator.hs  Options.hs  ReadOptions.hs  Types.hs  WriteOptions.hs
src/RocksDB/Internal/: C.hs  Types.hs
src/RocksDB/Internal/C/: C2HS.hs  COptions.chs  CRocksDB.chs  CTypes.chs
test/: Matchers.hs
test/Integration/: IteratorSimpleSpec.hs  SimpleSpec.hs
